# sipd-ri

./: .gitignore  404.html  CNAME  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml
01_installation/: index.html
02_getting_started/: index.html
03_user_guide/: index.html
04_contributing/: index.html
data/: SKPD-2024.txt  SKPD-KPA-2024.txt
docs/: 01_installation.md  02_getting_started.md  03_user_guide.md  04_contributing.md  index.md
search/: search_index.json
src/: bot_sipd.py  file_manager.py  helper_cookies.py  helper_excel.py  helper_main.py  log_setup.py  menu.py  utils.py
src/sipd_bot/: __init__.py  aklap_jurnal_umum.py  aklap_lampiran.py  aklap_posting_jurnal.py  base.py  login.py  utils.py
