[project]
name = "sipd-ri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "playwright>=1.52.0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.14.1",
]
